--- a/src/library.html
+++ b/src/library.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/header-home.html"></include>
+    <include src="./partials/header-library.html"></include>
     <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
   </body>
