--- a/src/library.html
+++ b/src/library.html
@@ -11,7 +11,7 @@
     />
     <title>Filmoteka</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script defer type="module" src="./index.js"></script>
+    <script defer type="module" src="./js/library_main.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
