--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" type="image/png" href="./images/logo_gray.png" />
     <title>Filmoteka</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script defer type="module" src="./index.js"></script>
