--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,6 @@
     <include src="./partials/header-home.html"></include>
     <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/modal.html"></include>
   </body>
 </html>
